--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,3 @@
-<!-- views/partials/footer.hbs -->
 <style>
 .main-footer {
     width: 100%;
@@ -6,8 +5,6 @@
     background-color: #1E1E2F;
     color: #cccccc;
     padding: 20px;
-    bottom: 0;
-    left: 0;
     font-size: 0.9em;
     transition: background-color 0.3s ease;
 }
@@ -27,6 +24,6 @@
 }
 </style>
 <footer class="main-footer">
-    <p>&copy; 2024 My Email App. All rights reserved.</p>
-    <p>Contact us: <a href="mailto:contact@myemailapp.com">contact@myemailapp.com</a> | Phone: (123) 456-7890</p>
+    <p>&copy; 2024 HANU Email Web. All rights reserved.</p>
+    <p>Contact me: <a href="mailto:dluy2406@gmail.com">dluy2406@mgmail.com</a> | Phone: 0383522512</p>
 </footer>
