divided into  2 file route.js and index.js

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -191,6 +191,6 @@
             </div>
             <button type="submit">Sign Up</button>
         </form>
-        <span style="color: black;">Already have an account? <a href="/signin" style="text-decoration: underline; color: blue">Sign in</a></span>
+        <span style="color: black;">Already have an account? <a href="/" style="text-decoration: underline; color: blue">Sign in</a></span>
     </div>
 </div>
